# RISC-V-Emulator

./: CMakeLists.txt  README.md  meminit.hex  memsim.hex
include/: alu.h  control.h  processor.h  ram.h  register_file.h  trace.h
src/: alu.cpp  control.cpp  main.cpp  processor.cpp  ram.cpp  register_file.cpp
